--- a/index.html
+++ b/index.html
@@ -91,4 +91,5 @@
  </body>
 <script src="js/jquery-1.11.2.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
+<script src="js/phoodeez.js"></script>
 </html>
