style changes. removed dropdwon column for that page. kept samijs for future use

--- a/states/main.html
+++ b/states/main.html
@@ -1,6 +1,4 @@
-<div class="container-fluid">
-    <div class="row">
-        <div id="option_wrapper">
+<div class="container-fluid main-wrapper">
             <h1 class="phoodeez_funnel">Hello, what are you ordering for?</h1>
             <div class="row cat_row">
                 <div class="col-sm-2 col-sm-offset-1 option_item">
@@ -44,9 +42,4 @@
                     </a>
                 </div>
             </div><!-- .cat_row -->
-        </div>
-        <div id="cart_dropdown_buffer">
-
-        </div>
-    </div>
 </div>
