--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Phoodeez</title>
     <script src="js/jquery-1.11.2.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.13/angular.min.js"></script>
     <script src="https://cdn.firebase.com/js/client/2.1.2/firebase.js"></script>
     <script src="https://cdn.firebase.com/libs/angularfire/0.9.2/angularfire.min.js"></script>
+        <script src="js/ui-bootstrap-tpls-0.12.0.min"></script>
     <script src="js/ui-router.js"></script>
     <script src="js/phoodeez.js"></script>
 <link href='http://fonts.googleapis.com/css?family=Crete+Round' rel='stylesheet' type='text/css'>
@@ -34,9 +34,11 @@
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav pull-right navbar-nav-phoodeez">
             <li><a ui-sref="services">Services</a></li>
-            <li><a href="#signin">Sign in</a></li>
-            <li class="dropdown" id="cart-dropdown">
-              <a href="#" class="dropdown-toggle cart_dropdown" id="cart_dropdown_btn" data-toggle="dropdown" role="button" aria-expanded="false"><span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span></a>
+            <li><a href="#" ng-click="open('login')">Sign in</a></li>
+            <li class="dropdown" id="cart-dropdown" dropdown on-toggle="toggled(open)" is-open="status.isopen">
+
+              <a href="#" class="dropdown-toggle cart_dropdown" id="cart_dropdown_btn" data-toggle="dropdown" dropdown-toggle
+                       data-toggle="dropdown"><span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span></a>
               <div class="dropdown-menu dropdown-menu-right dropdown-cart" role="menu">
                 	<div class="empty_cart"><p><span class="glyphicon glyphicon-cutlery" aria-hidden="true"></span></p>Your cart is empty.</div>
               </div>
@@ -54,6 +56,6 @@
         <a ui-sref="about">About</a> | <a ui-sref="contact">Contact</a> | <a ui-sref="feedback">Feedback</a> | <a ui-sref="jobs">Jobs</a> | <a ui-sref="home">Privacy Policy</a>
       </div>
    </footer>
-
+<div ng-include="'states/modals.html'"></div>
  </body>
 </html>	
