--- a/states/modals.html
+++ b/states/modals.html
@@ -1,7 +1,11 @@
 <script type="text/ng-template" id="login">
     <div class="modal-header">
     	<button type="button" class="close" ng-click="cancel()"	 aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title login-title">Sign in</h4>
+        <h4 class="modal-title login-title">
+        	<span ng-show="!signupbox">Sign in</span>
+        	<span ng-show="signupbox">Create Account</span>
+
+        </h4>
     </div>
     <div class="modal-body login-modal-body">
      <form ng-show="!signupbox">
