--- a/index.html
+++ b/index.html
@@ -1,22 +1,17 @@
 <!DOCTYPE html>
-<html lang="en" ng-app="tpa">
+<html lang="en" ng-app="phoodeez">
 <head>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Phoodeez</title>
-    <script src="js/jquery-1.11.2.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.13/angular.min.js"></script>
-    <script src="https://cdn.firebase.com/js/client/2.1.2/firebase.js"></script>
-    <script src="https://cdn.firebase.com/libs/angularfire/0.9.2/angularfire.min.js"></script>
-        <script src="js/ui-bootstrap-tpls-0.12.0.min"></script>
-    <script src="js/ui-router.js"></script>
-    <script src="js/phoodeez.js"></script>
+<title>Phoodeez</title> 
+    
+
 <link href='http://fonts.googleapis.com/css?family=Crete+Round' rel='stylesheet' type='text/css'>
 <link href="css/bootstrap.min.css" rel="stylesheet">
 <link href="css/style.css" rel="stylesheet">
 </head>
-<body ng-controller="Main">
+<body ng-controller="ApplicationController">
     <!-- Fixed navbar -->
     <nav class="navbar navbar-default navbar-phoodeez navbar-fixed-top">
       <div class="container">
@@ -33,10 +28,34 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav pull-right navbar-nav-phoodeez">
-            <li><a ui-sref="services">Services</a></li>
-            <li><a href="#" ng-click="open('login')">Sign in</a></li>
-            <li class="dropdown" id="cart-dropdown" dropdown on-toggle="toggled(open)" is-open="status.isopen">
 
+            <li ng-show="!loggedIn">
+            	<a ui-sref="services">Services</a>
+            </li>
+
+            <li ng-show="loggedIn">
+            	<a href="#">Calendar</a>
+            </li>
+
+            <li ng-show="!loggedIn">
+            	<a href="#" ng-cloak ng-click="open('login')">Sign in</a>
+            </li>
+
+            <li class="dropdown" ng-show="loggedIn" dropdown>
+              <a href="#" class="dropdown-toggle" dropdown-toggle data-toggle="dropdown">
+                    <span ng-cloak>{{userData.firstName}} {{userData.lastName}} <span class="caret"></span></span>
+              </a>
+              <ul class="dropdown-menu dropdown-menu-right" role="menu">
+                    <li><a href="#">Profile</a></li>
+                    <li><a href="#">Order History</a></li>
+                    <li><a href="#">Payments</a></li>
+                    <li><a href="#" ng-click="logout();">Logout</a></li>
+              </ul> 
+
+
+            </li>
+
+            <li class="dropdown" id="cart-dropdown" dropdown on-toggle="toggled(open)" is-open="status.isopen">
               <a href="#" class="dropdown-toggle cart_dropdown" id="cart_dropdown_btn" data-toggle="dropdown" dropdown-toggle
                        data-toggle="dropdown"><span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span></a>
               <div class="dropdown-menu dropdown-menu-right dropdown-cart" role="menu">
@@ -49,13 +68,35 @@
     </nav>
 
     <!-- Begin page content -->
-    <div ui-view></div>
+
+	<div class="container-fluid">
+	    <div ui-view></div>
+	</div>
+
     <!-- End page content -->
     <footer class="footer">
       <div class="container">
         <a ui-sref="about">About</a> | <a ui-sref="contact">Contact</a> | <a ui-sref="feedback">Feedback</a> | <a ui-sref="jobs">Jobs</a> | <a ui-sref="home">Privacy Policy</a>
       </div>
    </footer>
-<div ng-include="'states/modals.html'"></div>
+
+<div ng-include="'app/states/modals.html'"></div>
+
+
+<!-- Vendor Libs -->
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.13/angular.min.js"></script>
+<script src="https://code.angularjs.org/1.3.13/angular-animate.min.js"></script>
+<script src="https://cdn.firebase.com/js/client/2.1.2/firebase.js"></script>
+<script src="https://cdn.firebase.com/libs/angularfire/0.9.2/angularfire.min.js"></script>
+       
+<!-- UI Libs -->        
+<script src="scripts/ui-bootstrap-tpls-0.12.0.min"></script>
+
+<!-- App Libs -->
+<script src="app/app.js"></script>
+<script src="app/ui-router.js"></script>
+<script src="app/controllers/controllers.js"></script>
+<script src="app/services/factory.js"></script>
+
  </body>
 </html>	
