order modal with incrementor

--- a/app/states/submenu.html
+++ b/app/states/submenu.html
@@ -5,7 +5,7 @@
     <div class="row cat_row">
         <div ng-repeat="subpackages in catInfo.subpackages">
             <div class="col-sm-2 option_item" ng-class="{'col-sm-offset-1': $first}">
-                <a href="#">
+                <a href="#" ng-click="open(subpackages.VendorID)">
                     <div class="thumbnail suboption-thumb" ng-style="{'background-image':'url(img/items/{{subpackages.img}})'}">
                     <div class="package_title">{{subpackages.Name}}</div>
                     </div>
@@ -14,56 +14,3 @@
             </div>
      </div><!-- ng_repeat -->
     </div><!-- .cat_row -->
-
-<!-- 
-
-
-
-
-
-
-
-
-
-            <div class="row cat_row">
-                <div class="col-sm-2 col-sm-offset-1 option_item">
-                    <a ui-sref="submenu({ funnelID: '1' })">
-                        <div class="thumbnail option-thumb option_meeting">
-
-                        </div>
-                        <p>Sandwich Package</p>
-                    </a>
-                </div>
-                <div class="col-sm-2 option_item">
-                    <a ui-sref="submenu({ funnelID: '2' })">
-                        <div class="thumbnail option-thumb option_office">
-
-                        </div>
-                        <p>Wrap Package</p>
-                    </a>
-                </div>
-                <div class="col-sm-2 option_item">
-                    <a ui-sref="submenu({ funnelID: '3' })">
-                        <div class="thumbnail option-thumb option_class">
-
-                        </div>
-                        <p>Pizza Package</p>
-                    </a>
-                </div>
-                <div class="col-sm-2 option_item">
-                    <a ui-sref="submenu({ funnelID: '4' })">
-                        <div class="thumbnail option-thumb option_party">
-
-                        </div>
-                        <p>Asian Bento Boxes</p>
-                    </a>
-                </div>
-                <div class="col-sm-2 option_item">
-                    <a ui-sref="submenu({ funnelID: '5' })">
-                        <div class="thumbnail option-thumb option_wildcard">
-
-                        </div>
-                        <p>Pasta Package</p>
-                    </a>
-                </div>
-            </div>
