--- a/index.html
+++ b/index.html
@@ -97,6 +97,6 @@
 <script src="app/ui-router.js"></script>
 <script src="app/controllers/controllers.js"></script>
 <script src="app/services/factory.js"></script>
-
+<script src="app/directives/directives.js"></script>
  </body>
 </html>	
