--- a/app/states/modals.html
+++ b/app/states/modals.html
@@ -1,3 +1,5 @@
+
+<!-- Login Modal -->
 <script type="text/ng-template" id="login">
     <div class="modal-header">
     	<button type="button" class="close" ng-click="cancel()"	 aria-label="Close"><span aria-hidden="true">&times;</span></button>
@@ -62,5 +64,48 @@
 
 	<span class="login_back" ng-show="signupbox"><a href="#" ng-click="signupbox=false; $event.preventDefault();"><span class="glyphicon glyphicon-arrow-left" aria-hidden="true"></span> Back to Sign in</a></span> 
     </div>
+
+</script>
+
+
+<!-- Package Order Modal -->
+<script type="text/ng-template" id="package_order">
+    <div class="modal-header">
+    	<button type="button" class="close" ng-click="cancel()"	 aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title">
+        	Add Package
+        </h4>
+    </div>
+    <div class="modal-body package-modal-body">
+    	<div class="row modal-package-desc">
+    		<div class="col-sm-8">
+    			<p class="lead packageName">{{packageData.Name}}</p>
+    			<p class="lead packageDesc">{{packageData.Desc}}</p>
+    		</div>
+    		<div class="col-sm-4 package-order-info">
+				<p>Total quantity: <b>10</b></p>
+				<p>Total price: <b>$140.30</b></p>
+				<button class="btn btn-primary">Add to Cart</button>
+    		</div>
+    	</div>
+
+    	<div class="package-options-wrapper">
+    			<p class="lead packageName">Choose options:</p>
+    			<ul ng-repeat="options in packageData.Options">
+	    			<li>
+	    				<div class="row package-options-row">
+	    					<div class="col-sm-9">
+	    						<p class="lead package-options-title">{{options.title}}</p>
+	    						<p class="lead package-options-desc">{{options.desc}}</p>
+	    					</div>
+	    					<div class="col-sm-3 package-option-qty">
+		    					<order-qty min="model.min" max="model.max" qty="0" inc="$index"></order-qty>
+	    					</div>
+	    				</div>
+	    			</li>
+    			</ul>
+    	</div>
+	
+	</div>
 
 </script>
