--- a/app/states/submenu.html
+++ b/app/states/submenu.html
@@ -5,7 +5,7 @@
     <div class="row cat_row">
         <div ng-repeat="subpackages in catInfo.subpackages">
             <div class="col-sm-2 option_item" ng-class="{'col-sm-offset-1': $first}">
-                <a href="#" ng-click="open(subpackages.VendorID)">
+                <a ui-sref="package({ funnelID: '{{catInfo.info.url}}', singleID: '{{subpackages.VendorID}}' })">
                     <div class="thumbnail suboption-thumb" ng-style="{'background-image':'url(img/items/{{subpackages.img}})'}">
                     <div class="package_title">{{subpackages.Name}}</div>
                     </div>
