--- a/app/states/modals.html
+++ b/app/states/modals.html
@@ -79,33 +79,27 @@
     <div class="modal-body package-modal-body">
     	<div class="row modal-package-desc">
     		<div class="col-sm-8">
-    			<p class="lead packageName">{{packageData.Name}}</p>
-    			<p class="lead packageDesc">{{packageData.Desc}}</p>
+    			<p class="lead packageName">{{packageData.title}}</p>
+    			<p class="lead packageDesc">{{packageData.desc}}</p>
     		</div>
     		<div class="col-sm-4 package-order-info">
-				<p>Total quantity: <b>10</b></p>
-				<p>Total price: <b>$140.30</b></p>
-				<button class="btn btn-primary">Add to Cart</button>
+				<div class="package-option-qty">
+					<order-qty min="model.min" max="model.max" qty="0"></order-qty>
+				</div>
+				<div class="package-addtocart">
+					<button class="btn btn-primary">Add to Cart</button>
+				</div>
     		</div>
     	</div>
+    	<hr>
     	<div class="package-options-wrapper">
-    			<p class="lead packageName">Choose options: </p>
-    			<ul ng-repeat="options in packageData.Options">
-	    			<li>
-	    				<div class="row package-options-row">
-	    					<div class="col-sm-9">
-	    						<p class="lead package-options-title">{{options.title}}</p>
-	    						<p class="lead package-options-desc">{{options.desc}}</p>
-	    					</div> 
-	    					<div class="col-sm-3 package-option-qty">
-		    					<order-qty ng-model="totalValue" min="model.min" max="model.max" qty="0"></order-qty>
-	    					</div>
-	    				</div>
-	    			</li>
-    			</ul>
-
+			<div class="row package-options-row">
+				<div class="col-sm-12">
+					<p>Item details (optional):</p>
+					<textarea class="form-control" rows="2" placeholder="E.g. Hold the mayo"></textarea>
+				</div> 
+			</div>
     	</div>
-	
 	</div>
 
 </script>
