--- a/app/states/cart.html
+++ b/app/states/cart.html
@@ -2,10 +2,16 @@
 	<div class="row">
 		<div class="col-md-offset-7 col-md-5">
 			<div class="dropdown-cart">
-				<div class="empty_cart">
+				<div class="empty_cart" ng-show="!cartData">
 					<p><span class="glyphicon glyphicon-cutlery" aria-hidden="true"></span></p>
 					Your cart is empty.
-				</div>		
+				</div>	
+				<div class="cart_content" ng-show="cartData">
+					<div ng-repeat="cartItem in cartItems">
+				        {{cartItem}}
+				    </div>
+					
+				</div>
 			</div>
 		</div>
 	</div><!-- .row -->
