--- a/app/states/modals.html
+++ b/app/states/modals.html
@@ -91,7 +91,7 @@
   					</div>
 				</div>
 				<div class="package-addtocart">
-					<button class="btn btn-primary" ng-click="cartSubmit(packageData.Vendor, packageData.VendorID, singleData.ID, model.qty, packageData.Price, itemNote);">Add to Cart</button>	
+					<button class="btn btn-primary" ng-click="cartSubmit(packageData.Vendor, packageData.VendorID, singleData.title, singleData.ID, model.qty, packageData.Price, itemNote);">Add to Cart</button>	
 				</div>
     		</div>
     	</div>
