--- a/app/states/cart.html
+++ b/app/states/cart.html
@@ -1,5 +1,5 @@
 <div class="container cartContainer" ng-show="cartToggle">
-	<div class="row">
+	<div class="row cartContainer_row">
 		<div class="col-md-offset-7 col-md-5">
 			<div class="dropdown-cart">	
 				<div class="empty_cart" ng-show="!cartObjects.length > 0">
@@ -7,9 +7,17 @@
 					Your cart is empty.
 				</div>	
 				<div class="cart_content" ng-show="cartObjects.length > 0">
+				<div class="cart_action">
+					<div class="btn-group">
+						<button class="btn btn-danger btn-lg" type="submit">Add to Calendar</button>
+					</div>
+					<div class="btn-group">
+						<button class="btn btn-primary btn-lg" type="submit">Checkout</button>
+					</div>
+				<hr>
+				</div><!-- .cart_action -->
 					<div ng-repeat="cartItem in cartObjects">
-				        {{cartItem.vendorName}}
-
+				        Order from <b>{{cartItem.vendorName}}</b>
 				        <div class="row cart_container" ng-repeat="cartList in cartItem.cart">
 				        		<div class="col-xs-9">
 				        			<div class="cart_item_qty">
@@ -27,6 +35,7 @@
 				        			<div class="cart_item_price">{{(cartList.itemQty * cartList.itemPrice)|currency}}</div>
 				        		</div>
 				        </div><!-- .cart_container -->
+				    </div>	<!-- cartObjects -->
 				    <div class="cart_sum">
 				    <hr>	
 				    	<div class="row cart_subTotal">
@@ -47,7 +56,6 @@
 				    	</div>
 
 				    </div> <!-- .cart_sum -->
-				    </div>	<!-- cartObjects -->
 				</div>
 			</div>
 		</div>
