further cart styling, calendar page

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             </li>
 
             <li ng-show="loggedIn">
-            	<a href="#">Calendar</a>
+            	<a ui-sref="calendar">Calendar</a>
             </li>
 
             <li ng-show="!loggedIn">
