--- a/app/states/cart.html
+++ b/app/states/cart.html
@@ -7,12 +7,13 @@
 					Your cart is empty.
 				</div>	
 				<div class="cart_content" ng-show="cartObjects.length > 0">
+				<div class="short_notice" ng-show="totalTotal<100">{{(100-totalTotal)|currency}} required to continue</div>
 				<div class="cart_action">
 					<div class="btn-group">
-						<button class="btn btn-danger btn-lg" type="submit">Add to Calendar</button>
+						<button class="btn btn-danger btn-lg" ng-disabled="totalTotal<100" type="submit">Add to Calendar</button>
 					</div>
 					<div class="btn-group">
-						<button class="btn btn-primary btn-lg" type="submit">Checkout</button>
+						<button class="btn btn-primary btn-lg" ng-disabled="totalTotal<100" type="submit">Checkout</button>
 					</div>
 				<hr>
 				</div><!-- .cart_action -->
